<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:id="@+id/calendar_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="2015年2月" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/calendar_switch_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar_switch_month"
                android:gravity="center_horizontal"
                android:paddingBottom="2dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="2dp"
                android:text="@string/calendar_month" />

            <TextView
                android:id="@+id/calendar_switch_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar_switch_week"
                android:gravity="center_horizontal"
                android:paddingBottom="2dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="2dp"
                android:text="@string/calendar_week" />

            <TextView
                android:id="@+id/calendar_switch_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar_switch_day"
                android:gravity="center_horizontal"
                android:paddingBottom="2dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="2dp"
                android:text="@string/calendar_day" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/calendar_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

</LinearLayout>